--- a/ThirdTask/Base.lproj/Main.storyboard
+++ b/ThirdTask/Base.lproj/Main.storyboard
@@ -18,9 +18,6 @@
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Raf-jf-6GI">
                                 <rect key="frame" x="0.0" y="74" width="393" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" id="Vvc-Vt-lzC"/>
-                                </constraints>
                                 <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <textAttributes key="titleTextAttributes">
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -28,16 +25,7 @@
                                 <items>
                                     <navigationItem title="Colors" id="pln-fp-01V"/>
                                 </items>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="Vvc-Vt-lzC"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=compact-widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="Vvc-Vt-lzC"/>
-                                    </mask>
-                                </variation>
+                                <variation key="heightClass=compact-widthClass=compact" hidden="YES"/>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2XL-sG-1Jb">
                                 <rect key="frame" x="0.0" y="118" width="393" height="375"/>
@@ -46,7 +34,7 @@
                                     <constraint firstAttribute="width" constant="300" id="6n8-Fz-wMg"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableViewCell" id="3Oa-01-J1I">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="tableViewCell" id="3Oa-01-J1I">
                                         <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3Oa-01-J1I" id="gi1-v2-VnZ">
