--- a/ThirdTask/Base.lproj/Main.storyboard
+++ b/ThirdTask/Base.lproj/Main.storyboard
@@ -21,9 +21,17 @@
                                 <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <textAttributes key="titleTextAttributes">
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                    <offsetWrapper key="textShadowOffset" horizontal="400" vertical="0.0"/>
                                 </textAttributes>
                                 <items>
-                                    <navigationItem title="Colors" id="pln-fp-01V"/>
+                                    <navigationItem title="Colors" id="pln-fp-01V">
+                                        <barButtonItem key="rightBarButtonItem" title="Edit" id="uZd-5d-GKe">
+                                            <inset key="largeContentSizeImageInsets" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
+                                            <connections>
+                                                <action selector="reorderCells:" destination="BYZ-38-t0r" id="MuW-gN-lIr"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                                 <variation key="heightClass=compact-widthClass=compact" hidden="YES"/>
                             </navigationBar>
@@ -133,6 +141,7 @@
                     <connections>
                         <outlet property="contentDescription" destination="mnT-qA-e7m" id="PWE-6P-m3i"/>
                         <outlet property="contentView" destination="9bq-R1-IXp" id="fBU-VA-oC8"/>
+                        <outlet property="reorderButton" destination="uZd-5d-GKe" id="Pac-fY-s2k"/>
                         <outlet property="tableView" destination="2XL-sG-1Jb" id="pxh-MH-DG2"/>
                     </connections>
                 </viewController>
