Core Data - fourth commit

--- a/ThirdTask/Custom Cell/ColorTableViewCell.xib
+++ b/ThirdTask/Custom Cell/ColorTableViewCell.xib
@@ -19,8 +19,9 @@
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6RG-HY-3JK">
                         <rect key="frame" x="16" y="16" width="288" height="12"/>
                         <subviews>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vh8-R6-xq1">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vh8-R6-xq1">
                                 <rect key="frame" x="-30" y="0.0" width="30" height="12"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="soc-PS-a5k"/>
                                 </constraints>
