--- a/ThirdTask/View/Base.lproj/Main.storyboard
+++ b/ThirdTask/View/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Colors List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="mainPage" id="BYZ-38-t0r" customClass="ViewController" customModule="ThirdTask" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mainPage" id="BYZ-38-t0r" customClass="ColorsListViewController" customModule="ThirdTask" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -195,10 +195,10 @@
             </objects>
             <point key="canvasLocation" x="945.80152671755718" y="3.5211267605633805"/>
         </scene>
-        <!--New Color Controller-->
+        <!--Add Color View Controller-->
         <scene sceneID="QOg-kH-oal">
             <objects>
-                <viewController storyboardIdentifier="newColorVC" id="frK-bX-IfS" customClass="NewColorController" customModule="ThirdTask" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="newColorVC" id="frK-bX-IfS" customClass="AddColorViewController" customModule="ThirdTask" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WUS-6a-CIC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
